--- a/app/css/src/page/home.styl
+++ b/app/css/src/page/home.styl
@@ -1,3 +1,9 @@
+@keyframes cloud
+	from
+		margin-top 0
+	to
+		margin-top 10px
+
 #sec-home
 
 	[class^="button-"]
@@ -13,3 +19,22 @@
 		&:hover
 			color white
 			text-shadow -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
+
+.tile
+	position absolute
+
+.app
+	position relative
+
+.canvas-container
+	position relative
+	padding-top 40px
+
+	.cloud
+		animation cloud 2s infinite alternate
+		position absolute
+		top 10px
+		right 10px
+		background url('../img/cloud.png') no-repeat
+		width 140px
+		height 95px
