--- a/app/css/main.css
+++ b/app/css/main.css
@@ -271,6 +271,66 @@ td {
 .app {
   position: relative;
 }
+.buttons {
+  bottom: 10px;
+  position: absolute;
+  right: 10px;
+  z-index: 2;
+}
+.buttons a {
+  background-color: rgba(0,0,0,0.3);
+  border: 1px solid #000;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 3em;
+  font-weight: bold;
+  height: 60px;
+  text-align: center;
+  -webkit-transition: all 2s linear;
+  -moz-transition: all 2s linear;
+  -o-transition: all 2s linear;
+  -ms-transition: all 2s linear;
+  transition: all 2s linear;
+  width: 60px;
+}
+.buttons a:active {
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  transform: rotate(360deg);
+}
+.buttons .button-a {
+  margin: auto;
+}
+.buttons .button-b,
+.buttons .button-c {
+  display: inline-block;
+}
+.joystick2 {
+  background-color: rgba(0,0,0,0.4);
+  border: 10px solid #0ff;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  bottom: 10px;
+  cursor: pointer;
+  position: absolute;
+  height: 80px;
+  left: 10px;
+  width: 80px;
+  z-index: 2;
+}
+#joystick {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
 .canvas-container {
   position: relative;
   padding-top: 40px;
@@ -283,7 +343,7 @@ td {
   animation: cloud 2s infinite alternate;
   position: absolute;
   top: 10px;
-  right: 10px;
+  left: 10px;
   background: url("../img/cloud.png") no-repeat;
   width: 140px;
   height: 95px;
