--- a/app/css/src/util/font.styl
+++ b/app/css/src/util/font.styl
@@ -4,3 +4,9 @@
 	src url('../font/quietscream/the_quiet_scream-webfont.eot?#iefix') format('embedded-opentype'), url('../font/quietscream/the_quiet_scream-webfont.woff') format('woff'), url('../font/quietscream/the_quiet_scream-webfont.ttf') format('truetype'), url('../font/quietscream/the_quiet_scream-webfont.svg#thequietscreamRegular') format('svg')
 	font-weight normal
 	font-style normal
+
+@font-face
+	font-family 'Henny Penny'
+	font-style normal
+	font-weight 400
+	src local('Henny Penny'), local('HennyPenny-Regular'), url('../font/hennypenny/hennypenny.woff') format('woff')
