--- a/app/css/main.css
+++ b/app/css/main.css
@@ -5,6 +5,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Henny Penny';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Henny Penny'), local('HennyPenny-Regular'), url("../font/hennypenny/hennypenny.woff") format('woff');
+}
 article,
 aside,
 details,
@@ -245,6 +251,123 @@ table {
 }
 td {
   vertical-align: top;
+}
+.intro h1 {
+  font-family: 'Henny Penny', cursive;
+  text-align: center;
+}
+.intro nav {
+  font-family: 'Henny Penny', cursive;
+  text-align: center;
+}
+.intro nav li {
+  margin-top: 20px;
+}
+.intro nav a {
+  padding: 0px 10px;
+  text-decoration: none;
+}
+.intro nav a:visited {
+  text-decoration: none;
+}
+.intro .octo,
+.intro .parasite {
+  position: absolute;
+  top: 10px;
+  z-index: -1;
+}
+.intro .octo {
+  right: 10px;
+}
+.intro .parasite {
+  left: 10px;
+}
+.intro .alert,
+.intro .landspace {
+  display: none;
+}
+.intro .join_game input {
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #f0c36d;
+  padding: 4px 8px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+}
+.intro .popup {
+  border: 1px solid #f0c36d;
+  border-top: none;
+  background-color: #f9edbe;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 200px;
+  margin-right: 20%;
+  margin-left: 20%;
+  margin-top: -200px;
+  padding: 2%;
+  position: absolute;
+  top: 0;
+  -webkit-transition: margin-top linear 500ms;
+  -moz-transition: margin-top linear 500ms;
+  -o-transition: margin-top linear 500ms;
+  -ms-transition: margin-top linear 500ms;
+  transition: margin-top linear 500ms;
+  width: 60%;
+}
+.intro .popup.active {
+  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  margin-top: 0;
+}
+.intro .popup.active .close {
+  display: block;
+}
+.intro .popup .play {
+  float: right;
+  margin-top: 15px;
+}
+.intro .popup .close {
+  background: url("../img/close.png") no-repeat center center;
+  bottom: -10px;
+  display: none;
+  height: 20px;
+  font-family: 'Henny Penny', cursive;
+  position: absolute;
+  right: -10px;
+  width: 20px;
+}
+@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
+  .intro .parasite {
+    display: none;
+  }
+  .intro .alert {
+    border: 1px solid #f0c36d;
+    background-color: #f9edbe;
+    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    margin-top: 50px;
+    padding: 0 2%;
+  }
+  .intro .alert,
+  .intro .landspace {
+    display: block;
+  }
+  .intro .landspace {
+    margin: auto;
+  }
+  .intro .popup {
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
+  }
+  .intro h1,
+  .intro nav {
+    text-align: left;
+    padding-left: 20px;
+  }
 }
 canvas {
   position: absolute !important;
