--- a/app/css/src/page/home.styl
+++ b/app/css/src/page/home.styl
@@ -1,13 +1,125 @@
+.intro
+
+	h1
+		font-family 'Henny Penny', cursive
+		text-align center
+
+	nav
+		font-family 'Henny Penny', cursive
+		text-align center
+
+		li
+			margin-top 20px
+
+		a
+			padding 0px 10px
+			text-decoration none
+
+			&:visited
+				text-decoration none
+
+	.octo
+	.parasite
+		position absolute
+		top 10px
+		z-index -1
+
+	.octo
+		right 10px
+
+	.parasite
+		left 10px
+
+	.alert
+	.landspace
+		display none
+
+	.join_game
+		input
+			border-radius 4px
+			border 1px solid #F0C36D
+			padding 4px 8px
+			box-sizing border-box
+			width 100%
+
+	.popup
+		border 1px solid #F0C36D
+		border-top none
+		background-color #F9EDBE
+		box-sizing border-box
+		height 200px
+		margin-right 20%
+		margin-left 20%
+		margin-top - @height
+		padding 2%
+		position absolute
+		top 0
+		transition margin-top linear 500ms
+		width 60%
+
+		&.active
+			box-shadow 0 2px 4px rgba(0,0,0,.2)
+			margin-top 0
+
+			.close
+				display block
+
+		.play
+			float right
+			margin-top 15px				
+
+		.close
+			background url("../img/close.png") no-repeat center center
+			bottom -10px
+			display none
+			height 20px
+			font-family 'Henny Penny', cursive
+			position absolute
+			right @bottom
+			width @height
+
+@media only screen and (max-width: 480px), only screen and (max-device-width: 480px)
+	.intro
+		.parasite
+			display none
+
+		.alert
+			border 1px solid #F0C36D
+			background-color #F9EDBE
+			box-shadow 0 2px 4px rgba(0,0,0,.2)
+			margin-top 50px
+			padding 0 2%
+
+		.alert
+		.landspace
+			display block
+
+		.landspace
+			margin auto
+
+		.popup
+			margin-left 10%
+			margin-right 10%
+			width 80%
+
+		h1
+		nav
+			text-align left
+			padding-left 20px
+
 canvas
-    position absolute !important
-    top 0
-    left 0
+	position absolute !important
+	top 0
+	left 0
 
 @keyframes cloud
 	from
 		margin-top 0
 	to
 		margin-top 10px
+
+
+
 
 #sec-home
 
