--- a/app/css/main.css
+++ b/app/css/main.css
@@ -296,6 +296,13 @@ td {
   box-sizing: border-box;
   width: 100%;
 }
+.intro .new_game img {
+  border: 4px solid #f0c36d;
+  cursor: pointer;
+  display: inline-block;
+/*margin-left auto
+			margin-right auto*/
+}
 .intro .popup {
   border: 1px solid #f0c36d;
   border-top: none;
@@ -303,10 +310,10 @@ td {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  height: 200px;
+  min-height: 200px;
   margin-right: 20%;
   margin-left: 20%;
-  margin-top: -200px;
+  margin-top: -100%;
   padding: 2%;
   position: absolute;
   top: 0;
@@ -325,6 +332,9 @@ td {
 .intro .popup.active .close {
   display: block;
 }
+.intro .popup .img_container {
+  text-align: center;
+}
 .intro .popup .play {
   float: right;
   margin-top: 15px;
@@ -338,6 +348,20 @@ td {
   position: absolute;
   right: -10px;
   width: 20px;
+}
+.game .alert_waiting {
+  background-color: #f9edbe;
+  border: 1px solid #f0c36d;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  height: 130px;
+  padding: 4px 8px;
+  position: absolute;
+  margin-left: -150px;
+  margin-top: -65px;
+  top: 50%;
+  left: 50%;
+  width: 300px;
 }
 @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
   .intro .parasite {
