--- a/app/css/src/page/home.styl
+++ b/app/css/src/page/home.styl
@@ -41,16 +41,23 @@
 			padding 4px 8px
 			box-sizing border-box
 			width 100%
+	.new_game
+		img
+			border 4px solid #F0C36D
+			cursor pointer
+			display inline-block
+			/*margin-left auto
+			margin-right auto*/
 
 	.popup
 		border 1px solid #F0C36D
 		border-top none
 		background-color #F9EDBE
 		box-sizing border-box
-		height 200px
+		min-height 200px
 		margin-right 20%
 		margin-left 20%
-		margin-top - @height
+		margin-top -100%
 		padding 2%
 		position absolute
 		top 0
@@ -63,6 +70,9 @@
 
 			.close
 				display block
+
+		.img_container
+			text-align center
 
 		.play
 			float right
@@ -77,6 +87,21 @@
 			position absolute
 			right @bottom
 			width @height
+
+
+.game
+	.alert_waiting
+		background-color #F9EDBE
+		border 1px solid #F0C36D
+		border-radius 4px
+		height 130px
+		padding 4px 8px	
+		position absolute
+		margin-left -150px
+		margin-top -65px
+		top 50%
+		left 50%
+		width 300px
 
 @media only screen and (max-width: 480px), only screen and (max-device-width: 480px)
 	.intro
