--- a/app/css/main.css
+++ b/app/css/main.css
@@ -252,6 +252,18 @@ table {
 td {
   vertical-align: top;
 }
+.joystick {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  position: absolute;
+}
 .intro h1 {
   font-family: 'Henny Penny', cursive;
   text-align: center;
@@ -397,153 +409,6 @@ canvas {
   position: absolute !important;
   top: 0;
   left: 0;
-}
-#sec-home [class^="button-"],
-#sec-home [class*=" button-"] {
-  color: #000;
-  display: inline-block;
-  font-family: 'thequietscreamRegular';
-  font-size: 3em;
-  margin: 0 0.4em;
-  text-decoration: none;
-  -webkit-transition: all 200ms linear;
-  -moz-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
-  -ms-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-#sec-home [class^="button-"]:hover,
-#sec-home [class*=" button-"]:hover {
-  color: #fff;
-  text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
-}
-.tile {
-  position: absolute;
-}
-.app {
-  position: relative;
-}
-.buttons {
-  bottom: 10px;
-  position: absolute;
-  right: 10px;
-  z-index: 2;
-}
-.buttons a {
-  background-color: rgba(0,0,0,0.3);
-  border: 1px solid #000;
-  -webkit-border-radius: 30px;
-  border-radius: 30px;
-  color: #fff;
-  cursor: pointer;
-  display: block;
-  font-size: 3em;
-  font-weight: bold;
-  height: 60px;
-  text-align: center;
-  -webkit-transition: all 2s linear;
-  -moz-transition: all 2s linear;
-  -o-transition: all 2s linear;
-  -ms-transition: all 2s linear;
-  transition: all 2s linear;
-  width: 60px;
-}
-.buttons a:active {
-  -webkit-transform: rotate(360deg);
-  -moz-transform: rotate(360deg);
-  -o-transform: rotate(360deg);
-  -ms-transform: rotate(360deg);
-  transform: rotate(360deg);
-}
-.buttons .button-a {
-  margin: auto;
-}
-.buttons .button-b,
-.buttons .button-c {
-  display: inline-block;
-}
-.joystick2 {
-  background-color: rgba(0,0,0,0.4);
-  border: 10px solid #0ff;
-  -webkit-border-radius: 50px;
-  border-radius: 50px;
-  bottom: 10px;
-  cursor: pointer;
-  position: absolute;
-  height: 80px;
-  left: 10px;
-  width: 80px;
-  z-index: 2;
-}
-#joystick {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-.canvas-container {
-  position: relative;
-  padding-top: 40px;
-}
-.canvas-container .cloud {
-  -webkit-animation: cloud 2s infinite alternate;
-  -moz-animation: cloud 2s infinite alternate;
-  -o-animation: cloud 2s infinite alternate;
-  -ms-animation: cloud 2s infinite alternate;
-  animation: cloud 2s infinite alternate;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  background: url("../img/cloud.png") no-repeat;
-  width: 140px;
-  height: 95px;
-}
-@-moz-keyframes cloud {
-  0% {
-    margin-top: 0;
-  }
-
-  100% {
-    margin-top: 10px;
-  }
-}
-@-webkit-keyframes cloud {
-  0% {
-    margin-top: 0;
-  }
-
-  100% {
-    margin-top: 10px;
-  }
-}
-@-o-keyframes cloud {
-  0% {
-    margin-top: 0;
-  }
-
-  100% {
-    margin-top: 10px;
-  }
-}
-@-ms-keyframes cloud {
-  0% {
-    margin-top: 0;
-  }
-
-  100% {
-    margin-top: 10px;
-  }
-}
-@keyframes cloud {
-  0% {
-    margin-top: 0;
-  }
-
-  100% {
-    margin-top: 10px;
-  }
 }
 .ir {
   border: 0;
