--- a/app/css/src/page/home.styl
+++ b/app/css/src/page/home.styl
@@ -1,3 +1,12 @@
+.joystick
+	width 100%
+	height 100%
+	margin 0
+	padding 0
+	overflow hidden	
+	user-select none
+	position absolute
+
 .intro
 
 	h1
@@ -136,7 +145,7 @@ canvas
 	position absolute !important
 	top 0
 	left 0
-
+/*
 @keyframes cloud
 	from
 		margin-top 0
@@ -231,3 +240,4 @@ canvas
 		background url('../img/cloud.png') no-repeat
 		width 140px
 		height 95px
+*/
