--- a/app/css/main.css
+++ b/app/css/main.css
@@ -325,7 +325,7 @@ td {
   min-height: 200px;
   margin-right: 20%;
   margin-left: 20%;
-  margin-top: -100%;
+  margin-top: -900px;
   padding: 2%;
   position: absolute;
   top: 0;
@@ -375,7 +375,7 @@ td {
   left: 50%;
   width: 300px;
 }
-@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
+@media screen and (max-width: 400px) {
   .intro .parasite {
     display: none;
   }
