--- a/app/css/src/page/home.styl
+++ b/app/css/src/page/home.styl
@@ -66,7 +66,7 @@
 		min-height 200px
 		margin-right 20%
 		margin-left 20%
-		margin-top -100%
+		margin-top -900px
 		padding 2%
 		position absolute
 		top 0
@@ -112,7 +112,7 @@
 		left 50%
 		width 300px
 
-@media only screen and (max-width: 480px), only screen and (max-device-width: 480px)
+@media screen and (max-width: 400px)
 	.intro
 		.parasite
 			display none
