--- a/app/css/main.css
+++ b/app/css/main.css
@@ -252,6 +252,29 @@ table {
 td {
   vertical-align: top;
 }
+html,
+body,
+:root {
+  border: 1px solid #808080;
+  height: 600px;
+  position: relative;
+  width: 1024px;
+}
+body {
+  background: #fff url("../img/bg.jpg") no-repeat;
+  font-family: 'Dosis', sans-serif;
+}
+body a,
+body a:hover,
+body a:visited {
+  text-decoration: underline;
+}
+h1 {
+  font-size: 3em;
+  font-weight: bold;
+  text-shadow: 2px 0px 1px #21102f, -2px 0px 1px #21102f, 0px 2px 1px #21102f, 0px 2px 1px #21102f;
+  color: #e98;
+}
 .joystick {
   width: 100%;
   height: 100%;
@@ -265,22 +288,80 @@ td {
   position: absolute;
 }
 .intro h1 {
-  font-family: 'Henny Penny', cursive;
   text-align: center;
+  margin-top: 0;
 }
 .intro nav {
-  font-family: 'Henny Penny', cursive;
   text-align: center;
 }
 .intro nav li {
-  margin-top: 20px;
+  margin-top: 25px;
+}
+.intro nav li:nth-child(1) {
+  -webkit-transform: rotate(-4deg);
+  -moz-transform: rotate(-4deg);
+  -o-transform: rotate(-4deg);
+  -ms-transform: rotate(-4deg);
+  transform: rotate(-4deg);
+}
+.intro nav li:nth-child(2) {
+  -webkit-transform: rotate(1deg);
+  -moz-transform: rotate(1deg);
+  -o-transform: rotate(1deg);
+  -ms-transform: rotate(1deg);
+  transform: rotate(1deg);
+}
+.intro nav li:nth-child(3) {
+  -webkit-transform: rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  -ms-transform: rotate(-3deg);
+  transform: rotate(-3deg);
+}
+.intro nav li:nth-child(4) {
+  -webkit-transform: rotate(3deg);
+  -moz-transform: rotate(3deg);
+  -o-transform: rotate(3deg);
+  -ms-transform: rotate(3deg);
+  transform: rotate(3deg);
 }
 .intro nav a {
-  padding: 0px 10px;
+/*padding 0px 10px
+			text-decoration none
+
+			&:visited
+				text-decoration none*/
   text-decoration: none;
+  border: 1px solid #313;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  padding: 4px 10px;
+  font-weight: bold;
+  font-size: 2em;
+  background: #313;
+  -webkit-box-shadow: 1px 1px 8px #313;
+  box-shadow: 1px 1px 8px #313;
+  color: #e98;
 }
-.intro nav a:visited {
-  text-decoration: none;
+.intro .player,
+.intro .menu {
+  display: inline-block;
+  vertical-align: top;
+}
+.intro .player {
+  margin-top: 14px;
+  margin-left: 100px;
+  margin-right: 180px;
+}
+.intro .menu {
+  -webkit-transition: all 500ms linear;
+  -moz-transition: all 500ms linear;
+  -o-transition: all 500ms linear;
+  -ms-transition: all 500ms linear;
+  transition: all 500ms linear;
+}
+.intro .menu.hide {
+  margin-top: 610px;
 }
 .intro .octo,
 .intro .parasite {
