--- a/app/css/src/page/home.styl
+++ b/app/css/src/page/home.styl
@@ -1,3 +1,30 @@
+html
+body
+:root
+	border 1px solid gray
+	height 600px
+	position relative
+	width 1024px
+
+body
+	background white url("../img/bg.jpg") no-repeat
+	font-family font-2
+	//color white
+
+	a
+	a:hover
+	a:visited
+		//color white
+		text-decoration underline
+
+
+h1
+	font-size: 3em
+	font-weight: bold
+	text-shadow: 2px 0px 1px #21102F, -2px 0px 1px #21102F, 0px 2px 1px #21102F, 0px 2px 1px #21102F
+	color: #e98
+
+
 .joystick
 	width 100%
 	height 100%
@@ -10,22 +37,57 @@
 .intro
 
 	h1
-		font-family 'Henny Penny', cursive
+		//font-family 'Henny Penny', cursive
 		text-align center
+		margin-top 0
 
 	nav
-		font-family 'Henny Penny', cursive
+		//font-family 'Henny Penny', cursive
 		text-align center
 
 		li
-			margin-top 20px
+			margin-top 25px
 
+			&:nth-child(1)
+				transform rotate(-4deg)
+			&:nth-child(2)
+				transform rotate(1deg)
+			&:nth-child(3)
+				transform rotate(-3deg)
+			&:nth-child(4)
+				transform rotate(3deg)				
 		a
-			padding 0px 10px
+			/*padding 0px 10px
 			text-decoration none
 
 			&:visited
-				text-decoration none
+				text-decoration none*/
+			text-decoration none
+			border 1px solid #313
+			border-radius 4px
+			padding 4px 10px
+			font-weight bold
+			font-size 2em
+			background #313
+			box-shadow 1px 1px 8px #313
+			color #E98
+
+	.player
+	.menu
+		display inline-block
+		vertical-align top
+
+	.player
+		margin-top 14px
+		margin-left 100px
+		margin-right 180px
+
+	.menu
+		transition all 500ms linear
+
+		&.hide
+			margin-top 610px
+
 
 	.octo
 	.parasite
