--- a/app/css/src/util/variable.styl
+++ b/app/css/src/util/variable.styl
@@ -1,2 +1,3 @@
 font-1 = 'thequietscreamRegular'
-font-2 = 'Dosis', sans-serif;
+font-2 = 'Dosis', sans-serif
+font-3 = 'Annie Use Your Telescope', cursive
