--- a/app/css/main.css
+++ b/app/css/main.css
@@ -261,7 +261,6 @@ body,
   width: 1024px;
 }
 body {
-  background: #fff url("../img/bg.jpg") no-repeat;
   font-family: 'Dosis', sans-serif;
 }
 body a,
@@ -269,10 +268,20 @@ body a:hover,
 body a:visited {
   text-decoration: underline;
 }
-h1 {
-  font-size: 3em;
+section {
+  display: none;
+}
+.button {
+  text-decoration: none;
+  border: 1px solid #313;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  padding: 4px 10px;
   font-weight: bold;
-  text-shadow: 2px 0px 1px #21102f, -2px 0px 1px #21102f, 0px 2px 1px #21102f, 0px 2px 1px #21102f;
+  font-size: 2em;
+  background: #313;
+  -webkit-box-shadow: 1px 1px 8px #313;
+  box-shadow: 1px 1px 8px #313;
   color: #e98;
 }
 .joystick {
@@ -287,45 +296,147 @@ h1 {
   user-select: none;
   position: absolute;
 }
-.intro h1 {
+.first_state h1,
+.second_state h1 {
+  color: #313;
+  font-family: 'Annie Use Your Telescope', cursive;
+  text-align: center;
+}
+.first_state h1 {
+  font-size: 7em;
+}
+.first_state input {
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  border: none;
+  -webkit-box-shadow: 1px 1px 2px #313;
+  box-shadow: 1px 1px 2px #313;
+  margin: auto;
+  padding: 10px 20px;
+  width: 400px;
+}
+.first_state input,
+.first_state .button-continue {
+  display: inline-block;
+  vertical-align: top;
+}
+.first_state .button-continue {
+  background: url("../img/continue.png") no-repeat;
+  height: 78px;
+  width: 60px;
+}
+.first_state .container {
+  text-align: center;
+  width: 100%;
+}
+.second_state {
+  text-align: center;
+}
+.second_state h1 {
+  font-size: 4em;
+  margin-top: 0;
+}
+.second_state a {
+  position: absolute;
+}
+.second_state .button-prev {
+  left: 0px;
+}
+.second_state .button-next {
+  right: 0px;
+}
+.second_state .players {
+  position: relative;
+}
+.second_state .players img {
+  left: 280px;
+  opacity: 0;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  filter: alpha(opacity=0);
+  position: absolute;
+  -webkit-transition: opacity 700ms linear;
+  -moz-transition: opacity 700ms linear;
+  -o-transition: opacity 700ms linear;
+  -ms-transition: opacity 700ms linear;
+  transition: opacity 700ms linear;
+  top: 0;
+}
+.second_state .players img.active {
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.second_state .button {
+  bottom: 10px;
+  padding: 0 20px;
+  -webkit-transform: rotate(4deg);
+  -moz-transform: rotate(4deg);
+  -o-transform: rotate(4deg);
+  -ms-transform: rotate(4deg);
+  transform: rotate(4deg);
+  right: 10px;
+}
+.third_state .new_game {
+  left: 50%;
+  margin-top: -900px;
+  position: absolute;
+  -webkit-transition: all 400ms linear;
+  -moz-transition: all 400ms linear;
+  -o-transition: all 400ms linear;
+  -ms-transition: all 400ms linear;
+  transition: all 400ms linear;
+  top: 20px;
+  width: 49%;
+}
+.third_state .new_game.active {
+  margin-top: 0;
+}
+.third_state .new_game img {
+  margin: 10px;
+}
+.third_state .new_game .deactive {
+  border: 1px solid #808080;
+  background-color: #fff;
+}
+.third_state h1 {
   text-align: center;
   margin-top: 0;
 }
-.intro nav {
+.third_state nav {
   text-align: center;
 }
-.intro nav li {
+.third_state nav li {
   margin-top: 25px;
 }
-.intro nav li:nth-child(1) {
+.third_state nav li:nth-child(1) {
   -webkit-transform: rotate(-4deg);
   -moz-transform: rotate(-4deg);
   -o-transform: rotate(-4deg);
   -ms-transform: rotate(-4deg);
   transform: rotate(-4deg);
 }
-.intro nav li:nth-child(2) {
+.third_state nav li:nth-child(2) {
   -webkit-transform: rotate(1deg);
   -moz-transform: rotate(1deg);
   -o-transform: rotate(1deg);
   -ms-transform: rotate(1deg);
   transform: rotate(1deg);
 }
-.intro nav li:nth-child(3) {
+.third_state nav li:nth-child(3) {
   -webkit-transform: rotate(-3deg);
   -moz-transform: rotate(-3deg);
   -o-transform: rotate(-3deg);
   -ms-transform: rotate(-3deg);
   transform: rotate(-3deg);
 }
-.intro nav li:nth-child(4) {
+.third_state nav li:nth-child(4) {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
   -o-transform: rotate(3deg);
   -ms-transform: rotate(3deg);
   transform: rotate(3deg);
 }
-.intro nav a {
+.third_state nav a {
 /*padding 0px 10px
 			text-decoration none
 
@@ -343,43 +454,44 @@ h1 {
   box-shadow: 1px 1px 8px #313;
   color: #e98;
 }
-.intro .player,
-.intro .menu {
+.third_state .player,
+.third_state .menu {
   display: inline-block;
   vertical-align: top;
 }
-.intro .player {
+.third_state .player {
   margin-top: 14px;
   margin-left: 100px;
   margin-right: 180px;
 }
-.intro .menu {
+.third_state .menu {
   -webkit-transition: all 500ms linear;
   -moz-transition: all 500ms linear;
   -o-transition: all 500ms linear;
   -ms-transition: all 500ms linear;
   transition: all 500ms linear;
+  width: 40%;
 }
-.intro .menu.hide {
+.third_state .menu.hide {
   margin-top: 610px;
 }
-.intro .octo,
-.intro .parasite {
+.third_state .octo,
+.third_state .parasite {
   position: absolute;
   top: 10px;
   z-index: -1;
 }
-.intro .octo {
+.third_state .octo {
   right: 10px;
 }
-.intro .parasite {
+.third_state .parasite {
   left: 10px;
 }
-.intro .alert,
-.intro .landspace {
+.third_state .alert,
+.third_state .landspace {
   display: none;
 }
-.intro .join_game input {
+.third_state .join_game input {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   border: 1px solid #f0c36d;
@@ -389,14 +501,7 @@ h1 {
   box-sizing: border-box;
   width: 100%;
 }
-.intro .new_game img {
-  border: 4px solid #f0c36d;
-  cursor: pointer;
-  display: inline-block;
-/*margin-left auto
-			margin-right auto*/
-}
-.intro .popup {
+.third_state .popup {
   border: 1px solid #f0c36d;
   border-top: none;
   background-color: #f9edbe;
@@ -417,22 +522,22 @@ h1 {
   transition: margin-top linear 500ms;
   width: 60%;
 }
-.intro .popup.active {
+.third_state .popup.active {
   -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   margin-top: 0;
 }
-.intro .popup.active .close {
+.third_state .popup.active .close {
   display: block;
 }
-.intro .popup .img_container {
+.third_state .popup .img_container {
   text-align: center;
 }
-.intro .popup .play {
+.third_state .popup .play {
   float: right;
   margin-top: 15px;
 }
-.intro .popup .close {
+.third_state .popup .close {
   background: url("../img/close.png") no-repeat center center;
   bottom: -10px;
   display: none;
