--- a/app/css/src/page/home.styl
+++ b/app/css/src/page/home.styl
@@ -7,7 +7,7 @@ body
 	width 1024px
 
 body
-	background white url("../img/bg.jpg") no-repeat
+	//background white url("../img/bg.jpg") no-repeat
 	font-family font-2
 	//color white
 
@@ -18,12 +18,27 @@ body
 		text-decoration underline
 
 
-h1
+section
+	display none
+
+
+/*h1
 	font-size: 3em
 	font-weight: bold
 	text-shadow: 2px 0px 1px #21102F, -2px 0px 1px #21102F, 0px 2px 1px #21102F, 0px 2px 1px #21102F
-	color: #e98
+	color: #e98*/
 
+
+.button
+	text-decoration none
+	border 1px solid #313
+	border-radius 4px
+	padding 4px 10px
+	font-weight bold
+	font-size 2em
+	background #313
+	box-shadow 1px 1px 8px #313
+	color #E98
 
 .joystick
 	width 100%
@@ -34,7 +49,98 @@ h1
 	user-select none
 	position absolute
 
-.intro
+
+.first_state
+.second_state
+	h1
+		color #313
+		font-family font-3
+		text-align center
+	
+
+
+.first_state
+	h1
+		font-size 7em
+
+	input
+		border-radius 2px
+		border none
+		box-shadow 1px 1px 2px #313
+		margin auto
+		padding 10px 20px
+		width 400px
+
+	input
+	.button-continue
+		display inline-block
+		vertical-align top
+
+	.button-continue
+		background url("../img/continue.png") no-repeat
+		height 78px
+		width 60px
+
+	.container
+		text-align center
+		width 100%
+
+.second_state
+	text-align center
+	h1
+		font-size 4em
+		margin-top 0
+
+	a
+		position absolute
+
+	.button-prev
+		left 0px
+
+	.button-next
+		right 0px
+
+	.players
+		//margin auto
+		//margin-left 280px
+		position relative
+
+		img
+			left 280px
+			opacity 0
+			position absolute
+			transition opacity 700ms linear
+			top 0
+
+			&.active
+				opacity 1
+
+	.button
+		bottom 10px
+		padding 0 20px
+		transform rotate(4deg)
+		right 10px
+
+
+.third_state
+
+	.new_game
+		left 50%
+		margin-top -900px
+		position absolute
+		transition all 400ms linear
+		top 20px
+		width 49%
+
+		&.active
+			margin-top 0
+
+		img
+			margin 10px
+
+		.deactive
+			border 1px solid gray
+			background-color white
 
 	h1
 		//font-family 'Henny Penny', cursive
@@ -84,6 +190,7 @@ h1
 
 	.menu
 		transition all 500ms linear
+		width 40%
 
 		&.hide
 			margin-top 610px
@@ -112,7 +219,7 @@ h1
 			padding 4px 8px
 			box-sizing border-box
 			width 100%
-	.new_game
+	/*.new_game
 		img
 			border 4px solid #F0C36D
 			cursor pointer
