--- a/app/css/main.css
+++ b/app/css/main.css
@@ -275,12 +275,14 @@ section {
   text-decoration: none;
   border: 1px solid #313;
   -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
   border-radius: 4px;
   padding: 4px 10px;
   font-weight: bold;
   font-size: 2em;
   background: #313;
   -webkit-box-shadow: 1px 1px 8px #313;
+  -moz-box-shadow: 1px 1px 8px #313;
   box-shadow: 1px 1px 8px #313;
   color: #e98;
 }
@@ -292,9 +294,11 @@ section {
   overflow: hidden;
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999999;
 }
 .first_state h1,
 .second_state h1 {
@@ -307,9 +311,11 @@ section {
 }
 .first_state input {
   -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
   border-radius: 2px;
   border: none;
   -webkit-box-shadow: 1px 1px 2px #313;
+  -moz-box-shadow: 1px 1px 2px #313;
   box-shadow: 1px 1px 2px #313;
   margin: auto;
   padding: 10px 20px;
@@ -351,28 +357,22 @@ section {
 .second_state .players img {
   left: 280px;
   opacity: 0;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  filter: alpha(opacity=0);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   position: absolute;
   -webkit-transition: opacity 700ms linear;
   -moz-transition: opacity 700ms linear;
-  -o-transition: opacity 700ms linear;
-  -ms-transition: opacity 700ms linear;
   transition: opacity 700ms linear;
   top: 0;
 }
 .second_state .players img.active {
   opacity: 1;
-  -ms-filter: none;
-  filter: none;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
 }
 .second_state .button {
   bottom: 10px;
   padding: 0 20px;
   -webkit-transform: rotate(4deg);
   -moz-transform: rotate(4deg);
-  -o-transform: rotate(4deg);
-  -ms-transform: rotate(4deg);
   transform: rotate(4deg);
   right: 10px;
 }
@@ -382,8 +382,6 @@ section {
   position: absolute;
   -webkit-transition: all 400ms linear;
   -moz-transition: all 400ms linear;
-  -o-transition: all 400ms linear;
-  -ms-transition: all 400ms linear;
   transition: all 400ms linear;
   top: 20px;
   width: 49%;
@@ -391,10 +389,23 @@ section {
 .third_state .new_game.active {
   margin-top: 0;
 }
-.third_state .new_game img {
+.third_state .join_game {
+  left: 50%;
+  margin-top: -900px;
+  position: absolute;
+  -webkit-transition: all 400ms linear;
+  -moz-transition: all 400ms linear;
+  transition: all 400ms linear;
+  top: 20px;
+  width: 49%;
+}
+.third_state .join_game.active {
+  margin-top: 0;
+}
+.third_state .join_game img {
   margin: 10px;
 }
-.third_state .new_game .deactive {
+.third_state .join_game .deactive {
   border: 1px solid #808080;
   background-color: #fff;
 }
@@ -411,29 +422,21 @@ section {
 .third_state nav li:nth-child(1) {
   -webkit-transform: rotate(-4deg);
   -moz-transform: rotate(-4deg);
-  -o-transform: rotate(-4deg);
-  -ms-transform: rotate(-4deg);
   transform: rotate(-4deg);
 }
 .third_state nav li:nth-child(2) {
   -webkit-transform: rotate(1deg);
   -moz-transform: rotate(1deg);
-  -o-transform: rotate(1deg);
-  -ms-transform: rotate(1deg);
   transform: rotate(1deg);
 }
 .third_state nav li:nth-child(3) {
   -webkit-transform: rotate(-3deg);
   -moz-transform: rotate(-3deg);
-  -o-transform: rotate(-3deg);
-  -ms-transform: rotate(-3deg);
   transform: rotate(-3deg);
 }
 .third_state nav li:nth-child(4) {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
-  -o-transform: rotate(3deg);
-  -ms-transform: rotate(3deg);
   transform: rotate(3deg);
 }
 .third_state nav a {
@@ -445,12 +448,14 @@ section {
   text-decoration: none;
   border: 1px solid #313;
   -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
   border-radius: 4px;
   padding: 4px 10px;
   font-weight: bold;
   font-size: 2em;
   background: #313;
   -webkit-box-shadow: 1px 1px 8px #313;
+  -moz-box-shadow: 1px 1px 8px #313;
   box-shadow: 1px 1px 8px #313;
   color: #e98;
 }
@@ -467,8 +472,6 @@ section {
 .third_state .menu {
   -webkit-transition: all 500ms linear;
   -moz-transition: all 500ms linear;
-  -o-transition: all 500ms linear;
-  -ms-transition: all 500ms linear;
   transition: all 500ms linear;
   width: 40%;
 }
@@ -493,6 +496,7 @@ section {
 }
 .third_state .join_game input {
   -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
   border-radius: 4px;
   border: 1px solid #f0c36d;
   padding: 4px 8px;
@@ -517,14 +521,13 @@ section {
   top: 0;
   -webkit-transition: margin-top linear 500ms;
   -moz-transition: margin-top linear 500ms;
-  -o-transition: margin-top linear 500ms;
-  -ms-transition: margin-top linear 500ms;
   transition: margin-top linear 500ms;
   width: 60%;
 }
 .third_state .popup.active {
-  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.20);
+  -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.20);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.20);
   margin-top: 0;
 }
 .third_state .popup.active .close {
@@ -551,6 +554,7 @@ section {
   background-color: #f9edbe;
   border: 1px solid #f0c36d;
   -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
   border-radius: 4px;
   height: 130px;
   padding: 4px 8px;
@@ -568,8 +572,9 @@ section {
   .intro .alert {
     border: 1px solid #f0c36d;
     background-color: #f9edbe;
-    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.20);
+    -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.20);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.20);
     margin-top: 50px;
     padding: 0 2%;
   }
@@ -604,7 +609,7 @@ canvas {
   background-color: transparent;
 }
 .hidden {
-  display: none;
+  display: none !important;
   visibility: hidden;
 }
 .visuallyhidden {
