--- a/app/css/src/page/home.styl
+++ b/app/css/src/page/home.styl
@@ -48,6 +48,9 @@ section
 	overflow hidden	
 	user-select none
 	position absolute
+	top 0
+	left 0
+	z-index 999999
 
 
 .first_state
@@ -135,6 +138,17 @@ section
 		&.active
 			margin-top 0
 
+	.join_game
+		left 50%
+		margin-top -900px
+		position absolute
+		transition all 400ms linear
+		top 20px
+		width 49%
+
+		&.active
+			margin-top 0
+
 		img
 			margin 10px
 
@@ -161,7 +175,7 @@ section
 			&:nth-child(3)
 				transform rotate(-3deg)
 			&:nth-child(4)
-				transform rotate(3deg)				
+				transform rotate(3deg)
 		a
 			/*padding 0px 10px
 			text-decoration none
