--- a/app/css/main.css
+++ b/app/css/main.css
@@ -255,9 +255,9 @@ td {
 html,
 body,
 :root {
-  border: 1px solid #808080;
   height: 600px;
   position: relative;
+  overflow: hidden;
   width: 1024px;
 }
 body {
@@ -304,26 +304,30 @@ section {
 }
 .first_state h1 {
   font-size: 7em;
+  margin-bottom: 0.5em;
 }
 .first_state input {
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  border: none;
-  -webkit-box-shadow: 1px 1px 2px #313;
-  box-shadow: 1px 1px 2px #313;
+  border: 1px solid rgba(0,0,0,0.2);
+  -webkit-box-shadow: 1px 1px 4px #313;
+  box-shadow: 1px 1px 4px #313;
   margin: auto;
   padding: 10px 20px;
   width: 400px;
 }
-.first_state input,
-.first_state .button-continue {
+.first_state input {
   display: inline-block;
   vertical-align: top;
 }
 .first_state .button-continue {
   background: url("../img/continue.png") no-repeat;
-  height: 78px;
-  width: 60px;
+  display: block;
+  height: 106px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+  width: 117px;
 }
 .first_state .container {
   text-align: center;
