--- a/new/css/src/main.styl
+++ b/new/css/src/main.styl
@@ -3,5 +3,9 @@
 @import "util/variable"
 @import "util/general"
 
+@import "util/animation"
+
 @import "pag/intro"
 @import "pag/welcome"
+@import "pag/join"
+@import "pag/new"
