--- a/new/css/src/pag/intro.styl
+++ b/new/css/src/pag/intro.styl
@@ -1,12 +1,6 @@
 .intro
 	background-color color-base-1
 
-	span
-		color white
-		margin-top 10px
-		float right
-		margin-right 10px	
-
 	nav
 		position absolute
 		margin-top -2em
@@ -24,3 +18,6 @@
 			display inline-block
 			margin 0 20px
 			line-height 48px
+
+	.ball
+		box-shadow 0 0 0 4px color-base-1, 0 0 0 8px color-highlight-3
