--- a/new/css/src/pag/welcome.styl
+++ b/new/css/src/pag/welcome.styl
@@ -1,13 +1,14 @@
 .welcome
-	a
-		display block
-		float right
-
-	div
-		margin auto
-		width 210px
 
 	input
+		box-shadow 0 0 5px color-base-1
 		border 1px solid color-base-1
 		border-radius 4px
 		padding 10px 15px
+		transition box-shadow 300ms linear
+
+		&:active
+		&:focus
+			border 1px solid color-base-3
+			box-shadow 0 0 5px color-base-3
+			outline none
