--- a/new/css/src/util/variable.styl
+++ b/new/css/src/util/variable.styl
@@ -5,3 +5,10 @@ font-1 = 'Quicksand', sans-serif
 color-base-1 = #FF7600
 color-base-2 = #FFD300
 color-base-3 = #43AE39
+color-base-4 = #336698
+
+
+color-highlight-1 = #FFDDBF
+color-highlight-2 = #FFF4BF
+color-highlight-3 = #D8FFB4
+color-highlight-4 = #D5EAFF
