--- a/new/css/src/main.styl
+++ b/new/css/src/main.styl
@@ -5,7 +5,11 @@
 
 @import "util/animation"
 
+@import "pag/caju"
 @import "pag/intro"
 @import "pag/welcome"
 @import "pag/join"
 @import "pag/new"
+@import "pag/waiting"
+//@import "pag/choose"
+@import "pag/game"
