--- a/new/css/src/pag/intro.styl
+++ b/new/css/src/pag/intro.styl
@@ -20,4 +20,4 @@
 			line-height 48px
 
 	.ball
-		box-shadow 0 0 0 4px color-base-1, 0 0 0 8px color-highlight-3
+		box-shadow 0 0 0 4px color-base-1, 0 0 0 8px color-highlight2-3
