--- a/new/css/src/util/variable.styl
+++ b/new/css/src/util/variable.styl
@@ -8,7 +8,14 @@ color-base-3 = #43AE39
 color-base-4 = #336698
 
 
-color-highlight-1 = #FFDDBF
-color-highlight-2 = #FFF4BF
-color-highlight-3 = #D8FFB4
-color-highlight-4 = #D5EAFF
+color-highlight1-1 = #FFDDBF
+color-highlight1-2 = #FFF4BF
+color-highlight1-3 = #D8FFB4
+color-highlight1-4 = #AAD5FF
+
+
+
+color-highlight2-1 = #FFDDBF
+color-highlight2-2 = #FFF4BF
+color-highlight2-3 = #D8FFB4
+color-highlight2-4 = #D5EAFF
