--- a/new/css/src/pag/join.styl
+++ b/new/css/src/pag/join.styl
@@ -16,4 +16,4 @@
 		transition box-shadow 300ms linear
 
 	.ball
-		box-shadow 0 0 0 4px color-base-1, 0 0 0 8px color-highlight-3		
+		box-shadow 0 0 0 4px color-base-1, 0 0 0 8px color-highlight2-3		
