--- a/new/css/src/util/general.styl
+++ b/new/css/src/util/general.styl
@@ -22,23 +22,15 @@ section
 				border 1px solid red
 				box-shadow 0px 0px 5px red
 
-		a
+		.button
 			display block
 			float right
 
 	span
 		color white
-		margin-top 10px
-		float right
-		margin-right 10px
-
-.caju
-	h1
+		top 10px
 		position absolute
-		top 50%
-		left 50%
-		margin-top -1em
-		margin-left -2em
+		right 10px
 
 .main
 	transition opacity 800ms linear
@@ -47,8 +39,8 @@ section
 	opacity 0
 
 .ball
-	background-color color-highlight-3
-	box-shadow 0 0 0 4px white, 0 0 0 8px color-highlight-3
+	background-color color-highlight2-3
+	box-shadow 0 0 0 4px white, 0 0 0 8px color-highlight2-3
 	border-radius 40px
 	height @border-radius
 	position absolute
