--- a/new/css/src/pag/waiting.styl
+++ b/new/css/src/pag/waiting.styl
@@ -16,7 +16,7 @@
 		color white
 		font-size 8em
 		margin 0.1em
-		-webkit-text-stroke 1px color-base-1
+		//-webkit-text-stroke 1px color-base-1
 
 	.ball
 		box-shadow 0 0 0 4px color-base-2, 0 0 0 8px color-highlight2-3
