--- a/new/css/src/pag/game.styl
+++ b/new/css/src/pag/game.styl
@@ -1,7 +1,7 @@
 .game
 
 	section
-		border 1px solid gray
+		//border 1px solid gray
 		height 1024px
 		position relative
 		overflow hidden
@@ -23,8 +23,12 @@
 			margin-top -250px
 
 	.user-stats
+		box-sizing border-box
+		color color-base-1
 		margin 0
+		padding 0 15px
 		position absolute
+		user-select none
 		width 100%
 
 		&.player
@@ -34,8 +38,12 @@
 			transform rotate(180deg)
 			top 0
 
-		span:nth-child(2)
-			float right
+		span:nth-child(1)
+			font-size 5em
+			font-weight bold
+
+		/*span:nth-child(2)
+			float right*/
 
 	.no-active 
 		canvas
