--- a/new/css/src/util/general.styl
+++ b/new/css/src/util/general.styl
@@ -31,12 +31,13 @@ section
 	transition opacity 800ms linear
 
 .permanent
-	aside span
-		color white
+	aside div
 		top 10px
 		position absolute
 		right 10px
-		text-decoration underline
+		& > span
+			color white
+			text-decoration underline
 
 		img
 			vertical-align top
