--- a/new/css/src/pag/caju.styl
+++ b/new/css/src/pag/caju.styl
@@ -3,8 +3,9 @@
 		position absolute
 		top 50%
 		left 50%
-		margin-top -1em
-		margin-left -2em
+		margin-top -20px
+		margin-left -22px
+		font-size 20px
 
 	.ball
 		display none
