--- a/new/css/src/util/general.styl
+++ b/new/css/src/util/general.styl
@@ -26,6 +26,19 @@ section
 			display block
 			float right
 
+		input
+			border 1px solid transparent
+			//box-shadow 0 0 5px color-base-3
+			//border 1px solid color-base-1
+			//box-shadow 0 0 5px color-base-1
+			//border-radius 4px
+			padding 10px 15px
+			transition box-shadow 300ms linear
+
+			&:active
+			&:focus
+				outline none
+
 
 .main
 	transition opacity 800ms linear
