--- a/new/css/src/pag/profile.styl
+++ b/new/css/src/pag/profile.styl
@@ -82,7 +82,7 @@
 
 			.front
 				background-color color-base-5
-				border 1px solid transparent
+				border 2px solid transparent
 				text-align center
 				//box-shadow 1px 1px 4px rgba(0,0,0,0.5)
 				transform rotateX(0deg) rotateY(0deg)
@@ -94,7 +94,8 @@
 
 			.back
 				background-color color-base-5
-				border 1px solid color-base-1
+				border-radius 0 30px
+				//border 1px solid color-base-1
 				//border 1px solid rgba(255,255,255,.2)
 				//box-shadow 2px 2px 5px rgba(0,0,0,0.4)
 				padding 0 30px
@@ -108,6 +109,18 @@
 				a
 				a:visited
 					color color-highlight2-4
+
+			// Specific colors
+			&.beta-tester .back
+				border 2px solid #E8DE2F
+			&.strategist .back
+				border 2px solid #8CC63F
+			&.team .back
+				border 2px solid #D9519D
+			&.wins-100 .back
+				border 2px solid #FABF15
+			&.agile .back
+				border 2px solid #F47722
 	.ball
 		box-shadow 0 0 0 4px color-base-5, 0 0 0 8px color-highlight2-3
 
