--- a/new/css/src/pag/game.styl
+++ b/new/css/src/pag/game.styl
@@ -2,10 +2,10 @@
 
 	section
 		//border 1px solid gray
-		height 600px
+		/*height 600px
 		position relative
 		overflow hidden
-		width 1024px
+		width 1024px*/
 
 		.player_bear
 		.player_bunny
@@ -65,7 +65,7 @@
 		text-align center
 		z-index 9999
 
-	canvas
+	/*#canvas
 		left 0
 		position absolute
-		top 0
+		top 0*/
