--- a/new/css/src/pag/intro.styl
+++ b/new/css/src/pag/intro.styl
@@ -6,8 +6,9 @@
 
 	nav
 		position absolute
-		margin-top -2em
+		margin-top -4em
 		top 50%
+		text-align center
 		width 100%
 
 	ul
@@ -21,6 +22,14 @@
 			display inline-block
 			margin 0 20px
 			line-height 48px
+
+
+	.other
+		margin-top 3em
+		color rgba(255, 255, 255, .6)
+		border-bottom 1px solid
+		display inline-block
+		//text-decoration underline
 
 	.ball
 		box-shadow 0 0 0 4px color-base-1, 0 0 0 8px color-highlight2-3
