--- a/new/css/main.css
+++ b/new/css/main.css
@@ -202,8 +202,9 @@ section .popup input:focus {
 }
 .intro nav {
   position: absolute;
-  margin-top: -2em;
+  margin-top: -4em;
   top: 50%;
+  text-align: center;
   width: 100%;
 }
 .intro ul {
@@ -217,6 +218,12 @@ section .popup input:focus {
   display: inline-block;
   margin: 0 20px;
   line-height: 48px;
+}
+.intro .other {
+  margin-top: 3em;
+  color: rgba(255,255,255,0.6);
+  border-bottom: 1px solid;
+  display: inline-block;
 }
 .intro .ball {
   -webkit-box-shadow: 0 0 0 4px #ff7600, 0 0 0 8px #d8ffb4;
