--- a/new/css/src/pag/profile.styl
+++ b/new/css/src/pag/profile.styl
@@ -54,6 +54,7 @@
 					z-index 1000
 					transform rotateX(0deg) rotateY(0deg)
 					opacity 1
+					pointer-events all
 
 			.face
 				box-sizing border-box
@@ -105,6 +106,7 @@
 				transform rotateY(180deg)
 				opacity 0
 				z-index 800
+				pointer-events none
 
 				img
 					margin-right 5px
