--- a/new/css/src/pag/game.styl
+++ b/new/css/src/pag/game.styl
@@ -22,6 +22,26 @@
 			margin-left -64px
 			margin-top -250px
 
+	.time
+		color color-base-1
+		top 50%
+		left 50%
+		position absolute
+		line-height 1em
+		font-size 0
+		margin-left -75px
+		margin-top 0
+		text-align center
+		transition all 300ms linear
+		width 150px
+		z-index 99999
+
+		&.active
+			font-size 16em
+			//margin-left - 75px
+			margin-top - 125px
+
+
 	.permanent
 		display none
 
@@ -57,11 +77,21 @@
 			opacity .5
 			pointer-events none
 
-		.alert
+		.alert-run
 			animation error 160ms linear 100ms 8 alternate
 			display block
 
-	.alert
+	.finished
+		canvas
+			opacity .5
+			pointer-events none
+
+		.alert-gameover
+			animation error 160ms linear 100ms 8 alternate
+			display block			
+
+	[class^="alert-"]
+	[class*=" alert-"]
 		background-color color-base-1
 		border-radius 4px
 		color white
