--- a/new/css/src/pag/game.styl
+++ b/new/css/src/pag/game.styl
@@ -22,6 +22,13 @@
 			margin-left -64px
 			margin-top -250px
 
+	.handle
+		position absolute
+		top 0
+		width 512px
+		height 600px
+		z-index 99999
+
 	.time
 		color color-base-1
 		top 50%
@@ -34,7 +41,7 @@
 		text-align center
 		transition all 3	00ms linear
 		width 150px
-		z-index 99999
+		z-index 99998
 
 		&.active
 			font-size 16em
