--- a/new/css/src/pag/intro.styl
+++ b/new/css/src/pag/intro.styl
@@ -5,30 +5,47 @@
 		text-decoration underline
 
 	nav
+		box-sizing border-box
+		left 50%
 		position absolute
-		margin-top -4em
+		margin-top -56px
+		margin-left -120px
 		top 50%
 		text-align center
-		width 100%
+		width 240px
 
 	ul
+		box-sizing border-box
 		color white
 		list-style none
 		font-size 2.5em
+		margin-bottom 35px
 		text-align center
 
 		li
 			border-bottom 1px solid
-			display inline-block
-			margin 0 20px
+			//display inline-block
+			//margin 0 10px
 			line-height 48px
+
+			&:first-child
+				margin-left 0
+				float left
+
+			&:last-child
+				margin-right 0
+				float right
 
 
 	.other
-		margin-top 3em
-		color rgba(255, 255, 255, .6)
-		border-bottom 1px solid
-		display inline-block
+		//margin-top 3em
+		box-sizing border-box
+		color rgba(255, 255, 255, .9)
+		text-align center
+		text-decoration underline
+		margin-left 30px
+		//border-bottom 1px solid
+		//display inline
 		//text-decoration underline
 
 	.ball
