--- a/new/css/src/pag/intro.styl
+++ b/new/css/src/pag/intro.styl
@@ -43,7 +43,7 @@
 		color rgba(255, 255, 255, .9)
 		text-align center
 		text-decoration underline
-		margin-left 30px
+		//margin-left 30px
 		//border-bottom 1px solid
 		//display inline
 		//text-decoration underline
