--- a/new/css/main.css
+++ b/new/css/main.css
@@ -263,7 +263,6 @@ section .popup input:focus {
   color: rgba(255,255,255,0.9);
   text-align: center;
   text-decoration: underline;
-  margin-left: 30px;
 }
 .intro .ball {
   -webkit-box-shadow: 0 0 0 4px #ff7600, 0 0 0 8px #d8ffb4;
@@ -358,10 +357,12 @@ section .popup input:focus {
   top: 0;
   width: 512px;
   height: 600px;
-  z-index: 99999;
+  z-index: 99998;
 }
 .game .time {
-  color: #ff7600;
+  color: transparent;
+  border: 0;
+  text-shadow: none;
   top: 50%;
   left: 50%;
   position: absolute;
@@ -370,15 +371,16 @@ section .popup input:focus {
   margin-left: -75px;
   margin-top: 0;
   text-align: center;
-  -webkit-transition: all 3 0ms linear;
-  -moz-transition: all 3 0ms linear;
-  -o-transition: all 3 0ms linear;
-  -ms-transition: all 3 0ms linear;
-  transition: all 3 0ms linear;
+  -webkit-transition: all 300ms linear;
+  -moz-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  transition: all 300ms linear;
   width: 150px;
-  z-index: 99998;
+  z-index: 99997;
 }
 .game .time.active {
+  color: #ff7600;
   font-size: 16em;
   margin-top: -125px;
 }
@@ -463,7 +465,7 @@ section .popup input:focus {
   color: #fff;
   display: none;
   text-align: center;
-  z-index: 9999;
+  z-index: 99999;
 }
 .game #canvas {
   left: 0;
