--- a/new/css/src/pag/game.styl
+++ b/new/css/src/pag/game.styl
@@ -27,10 +27,12 @@
 		top 0
 		width 512px
 		height 600px
-		z-index 99999
+		z-index 99998
 
 	.time
-		color color-base-1
+		color transparent
+		border 0
+		text-shadow none
 		top 50%
 		left 50%
 		position absolute
@@ -39,11 +41,12 @@
 		margin-left -75px
 		margin-top 0
 		text-align center
-		transition all 3	00ms linear
+		transition all 300ms linear
 		width 150px
-		z-index 99998
+		z-index 99997
 
 		&.active
+			color color-base-1
 			font-size 16em
 			//margin-left - 75px
 			margin-top - 125px
@@ -113,7 +116,7 @@
 		color white
 		display none
 		text-align center
-		z-index 9999
+		z-index 99999
 
 	#canvas
 		left 0
